--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="content_label">The Content is</string>
     <string name="content_value">[content]</string>
     <string name="action_refresh">Refresh</string>
+    <string name="capital">Capital: </string>
+    <string name="region">Region: </string>
+    <string name="subregion">Subregion: </string>
+    <string name="population">Population: </string>
+    <string name="currency">Currency: </string>
+    <string name="language">Language: </string>
 </resources>
