--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
-    <string name="app_name">Country App</string>
+    <string name="app_name">Flag flags</string>
     <string name="id_label">The ID is</string>
     <string name="id_value">[id]</string>
     <string name="content_label">The Content is</string>
     <string name="content_value">[content]</string>
     <string name="action_refresh">Refresh</string>
+    <string name="menu_name">Find your country</string>
+    <string name="menu_flag">Find your flag</string>
     <string name="capital">Capital: </string>
     <string name="region">Region: </string>
     <string name="subregion">Subregion: </string>
